# helloPyO3

./: .gitignore  Cargo.toml  READme.md  env-setup.bat  make.bat  pyproject.toml  test.bat
docs/source/: conf.py  index.rst
pytests/: test_env.py
src/: lib.rs
