[project]
name = "hello-pyo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "pytest>=8.3.5",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
