[project]
name = "hello_pyo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpydoc>=1.8.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
